[gd_scene load_steps=3 format=2]

[ext_resource path="res://srs/UI/LoadBase.gd" type="Script" id=1]
[ext_resource path="res://srs/Save/GameSaver.tscn" type="PackedScene" id=2]

[node name="LoadBase" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="MarginContainer/GridContainer"]
margin_right = 78.0
margin_bottom = 20.0
text = "new game"
flat = true
expand_icon = true

[node name="LoadGame" type="Button" parent="MarginContainer/GridContainer"]
margin_top = 24.0
margin_right = 78.0
margin_bottom = 44.0
text = "load game"
flat = true
expand_icon = true

[node name="SpinBox" type="SpinBox" parent="MarginContainer/GridContainer"]
margin_top = 48.0
margin_right = 78.0
margin_bottom = 72.0
min_value = 1.0
max_value = 1000.0
value = 1.0

[node name="GameSaver" parent="." instance=ExtResource( 2 )]
[connection signal="pressed" from="MarginContainer/GridContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/LoadGame" to="." method="_on_LoadGame_pressed"]
